--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <hibernate.core.version>5.2.10.Final</hibernate.core.version>
     <mysql.connection.version>6.0.5</mysql.connection.version>
     <junit.verson>4.12</junit.verson>
+    <hamcrest.version>1.3</hamcrest.version>
   </properties>
   <dependencies>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -19,6 +20,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.verson}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-library</artifactId>
+      <version>${hamcrest.version}</version>
       <scope>test</scope>
     </dependency>
     <!-- MySQL connector -->
